fixed /#home-blog-posts overflow issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,6 +36,11 @@ body {
     padding: 0;
 }
 
+html {
+    margin: 0;
+    padding: 0;
+}
+
 
 /* Header */
 .header {
@@ -49,7 +54,9 @@ body {
     padding: 10px 25px;
     padding-right: 30px;
     background-color: var(--dark-gray-90);
-    box-shadow: 0px 2px 15px #060507;
+    border-bottom: 2px solid var(--dark-gray-80);
+    box-shadow: 0 2px 8px 0 #0b0a0e;
+    z-index: 1;
 }
 
 
@@ -121,7 +128,7 @@ body {
     display: flex;
     box-sizing: border-box;
     max-width: 900px;
-    margin: 100px;
+    margin: auto;
 }
 
 
@@ -188,6 +195,7 @@ body {
 }
 
 .home-posts #home-blog-posts {
+    z-index: 2;
     font-size:larger; 
     text-decoration: none;
     rotate: 180deg;
